console window and graphics windows can be set in Rconsole and in the
GUI Preferences editor.

The windows() graphics device has now arguments xpos, ypos to set the
initial position, overriding the settings in Rconsole.

The windows() device has a form of double-buffering: the visible plot
is updated only when there has been no plotting for 0.1sec or if the
plot has not been updated for 0.5sec.

Rterm reverts to sending warning/error messages to stdout on Windows
95/98/ME.

Rcmd BATCH is now handled in C, and works again on Windows 95/98/ME.

Calling dev.off() (or ending a session) when a windows() device is
open and recording plots automatically saves the current plot as the
last saved plot.

The windows (etc) devices use the Windows character metrics, which at
least on some systems have non-zero height and depth for space.  This
is now overridden.  (This showed up in the baseline placing for
plotmath expressions containing a space.)

A package's DLL used to be built only if standard source files were
seen.  Now src/Makefile.win is run if present, and if that generates
src/$(DLLNAME).dll the DLL is installed.  (DLLNAME is the package name
unless overridden.)

doc/manual/Makefile.win now has targets for fullrefman.{dvi,pdf}.

Added "Help | Search help..." menu item to Rgui as a front end to 
help.search().



Bug fixes
---------

The changes to versioned install had ensured that the currently
installed copy of a package had its MD5 sums checked, not the version
waiting to be installed.  Now the correct version is checked.

The Copy, Paste, Copy&Paste and Kill buttons in the MDI mode failed to
restore focus to the console (see rw1070 RGui changes).

The BioConductor people had stolen the menu item for "Install
package(s) from CRAN..." so it was not being enabled/disabled
properly.

The windows() device was not plotting transparent single lines correctly.

The scrollbars on the data editor work better for very large matrices,